# MCP_REVERSE_ENGINEERING

./: .gitignore  README.md  app.py  clientServerMcp.py  extractRawRegisters.py  find_title_text.py  pageSize.py  pdfInfo.py  pdfReturnImages.py  pyproject.toml  requirements.txt  searchRegister.py  server_mcp.py  showTitles.py
