[project]
name = "mcp-register-extraction"
version = "0.1.0"
description = "STM32 Register Extraction and MCP Server"
requires-python = ">=3.10"
dependencies = [
    "pdfplumber>=0.10.0",
    "pymupdf>=1.23.0",
    "mcp>=0.1.0",
    "pytesseract>=0.3.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

